--- a/roles/geerlingguy.postgresql/defaults/main.yml
+++ b/roles/geerlingguy.postgresql/defaults/main.yml
@@ -16,26 +16,26 @@ postgresql_auth_method: "{{ ansible_fips  | ternary('scram-sha-256', 'md5') }}"
 postgresql_unix_socket_directories:
   - /var/run/postgresql
 
-ip_address_for_student: 192.168.10.25
-
 postgresql_service_state: started
 postgresql_service_enabled: true
 
 # Global configuration options that will be set in postgresql.conf.
 postgresql_global_config_options:
   - option: listen_addresses
-    value: '*'
+    value:  'localhost,{{ ansible_default_ipv4.address }}'
   - option: unix_socket_directories
-    value: '{{ postgresql_unix_socket_directories | join(",") }}'
+    value:  '{{ postgresql_unix_socket_directories | join(",") }}'
   - option: log_directory
-    value: 'log'
+    value:  'log'
 
 # Host based authentication (hba) entries to be added to the pg_hba.conf. This
 # variable's defaults reflect the defaults that come with a fresh installation.
 postgresql_hba_entries:
   - {type: local, database: all, user: postgres, auth_method: peer}
+  - {type: local, database: all, user: student,  auth_method: reject}
   - {type: host,  database: all, user: student,  ip_address: "{{ ip_address_for_student }}", ip_mask: '255.255.255.255', auth_method: "{{ postgresql_auth_method }}"}
   - {type: host,  database: all, user: student,  address: '0.0.0.0/0',    auth_method: reject}
+  - {type: host,  database: all, user: student,  address: '::0/0',        auth_method: reject}
   - {type: local, database: all, user: all,      auth_method: peer}
   - {type: host,  database: all, user: all,      address: '127.0.0.1/32', auth_method: "{{ postgresql_auth_method }}"}
   - {type: host,  database: all, user: all,      address: '::1/128',      auth_method: "{{ postgresql_auth_method }}"}
