--- a/playbooks/choose_host.yml
+++ b/playbooks/choose_host.yml
@@ -1,3 +1,7 @@
+- hosts: "{{ second_host }}"
+  gather_facts: false
+  roles:
+    - role: lookup_ip_address
 - hosts: all
   gather_facts: false
   roles:
